--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,17 +69,17 @@ swiftmailer:
 #    host:      localhost
 
 oneup_uploader:
-    mappings:
-        docs:
-            frontend: dropzone
-            use_orphanage: true
 #    mappings:
 #        docs:
-#            frontend: custom
-#            custom_frontend:
-#                class: Sesile\DocumentBundle\Controller\DocumentUploader
-#                name: DocumentUploader
+#            frontend: dropzone
 #            use_orphanage: true
+    mappings:
+        docs:
+            frontend: custom
+            custom_frontend:
+                class: Sesile\DocumentBundle\Controller\DocumentUploader
+                name: DocumentUploader
+            use_orphanage: true
 
 fos_user:
     db_driver:     orm
