--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
         "doctrine/doctrine-fixtures-bundle": "2.3",
-        "doctrine/doctrine-migrations-bundle": "1.2.1",
+        "doctrine/doctrine-migrations-bundle": "^1.0",
         "twig/extensions": "~1.0",
         "symfony/assetic-bundle": "~2.7",
         "symfony/swiftmailer-bundle": "~2.3",
