[Evo] #594 - modifier le smtp pour la transmission des notifications mails

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -35,7 +35,7 @@ parameters:
         environnement: ""
         zone: sesile.fr
         target: sesile.fr.
-    email_sender_address: sesile@sictiam.fr
+    email_sender_address: sictiam@sesile.fr
     url_applet: signature.sesile.fr
     upload:
         path: %kernel.root_dir%/../web/uploads/avatars/
