[Update] update composer and update composer auth setasign

--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,7 @@
         }
     },
     "http-basic": {
-        "www.setasign.com/downloads/": {
+        "www.setasign.com": {
             "username": "***REMOVED***",
             "password": "***REMOVED***"
         }
