--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,8 +20,11 @@ framework:
     fragments:       ~
     http_method_override: true
     session:
-            save_path: "%kernel.root_dir%/sessions/"
-
+        save_path: "%kernel.root_dir%/sessions/"
+    assets:
+      json_manifest_path: '%kernel.project_dir%/web/build/manifest.json'
+    serializer:
+      enabled: false
 # Twig Configuration
 twig:
     debug:            '%kernel.debug%'
@@ -107,11 +110,6 @@ be_simple_sso_auth:
 
 parameters:
     cas_server: devsso.sictiam.fr
-#    cas_port: 389
-#    cas_path: /
-#    cas_protocol: '2.0'
-#    gorg:
-#        path: %kernel.root_dir%/../vendor/gorg/phpcas/
     be_simple.sso_auth.client.option.curlopt_ssl_verifypeer.value: FALSE
     upload:
         path: '%kernel.root_dir%/../web/uploads/avatars/'
@@ -130,8 +128,8 @@ parameters:
         repository: "git@gitlab.sictiam.fr:sesile/sesile.git"
         branch: master
         commit: 994e6f7902355e6bf62dde14804e0bd9863d5662
-        buildnumber: 3
-    majorversion: 3
+        buildnumber: 0
+    majorversion: 4
 #    url_applet: signature.sesile.fr
     url_applet: signature.dev.sesile.fr
     ovh_credential:
@@ -141,14 +139,21 @@ parameters:
 
 # La suite, c'est pour l'api
 fos_rest:
+    serializer:
+        serialize_null:  true
+    routing_loader:
+        include_format: false
     param_fetcher_listener: true
     body_listener: true
     body_converter:
-      enabled: false
+        enabled: false
     format_listener:
         rules:
             # setting fallback_format to json means that instead of considering the next rule in case of a priority mismatch, json will be used
             - { path: '^/api',  priorities: ['json', 'xml'],  prefer_extension: false }
+            - { path: '^/classeurs/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
+            - { path: '^/typeclasseurs/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
+            - { path: '^/users/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
             - { path: '^/', priorities: [ 'html', '*/*'], fallback_format: html, prefer_extension: false }
             - { path: '^/doc/download_sign', priorities: [ 'pdf' ], fallback_format: ~, prefer_extension: true }
     view:
