--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -3,7 +3,7 @@ parameters:
     database_driver: pdo_mysql
     database_host: 127.0.0.1
     database_port: null
-    database_name: sesile
+    database_name: sesile-react
     database_user: root
     database_password: sictiam
     mailer_transport: smtp
