[Evo] #1358 - Front - Intégration authentification

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -34,6 +34,7 @@ sesile_type_classeur_api:
 sesile_user_api:
     resource: "@SesileUserBundle/Controller/UserApiController.php"
     type:     rest
+    prefix:   /apirest/users
 
 
 sesile_main:
