--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -150,7 +150,8 @@ fos_rest:
     format_listener:
         rules:
             # setting fallback_format to json means that instead of considering the next rule in case of a priority mismatch, json will be used
-            - { path: '^/api',  priorities: ['json', 'xml'],  prefer_extension: false }
+            - { path: '^/api/',  priorities: ['json', 'xml'],  prefer_extension: false }
+            - { path: '^/apirest/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
             - { path: '^/classeurs/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
             - { path: '^/typeclasseurs/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
             - { path: '^/users/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
@@ -175,7 +176,7 @@ fos_rest:
 nelmio_api_doc:
     name: Sesile API
     motd:
-            template: SesileApiBundle::homedoc.html.twig
+        template: SesileApiBundle::homedoc.html.twig
 
 sensio_framework_extra:
     view:    { annotations: true }
