--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -152,9 +152,6 @@ fos_rest:
             # setting fallback_format to json means that instead of considering the next rule in case of a priority mismatch, json will be used
             - { path: '^/api/',  priorities: ['json', 'xml'],  prefer_extension: false }
             - { path: '^/apirest/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
-            - { path: '^/classeurs/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
-            - { path: '^/typeclasseurs/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
-            - { path: '^/users/',  priorities: ['json'], fallback_format: 'json',  prefer_extension: false }
             - { path: '^/', priorities: [ 'html', '*/*'], fallback_format: html, prefer_extension: false }
             - { path: '^/doc/download_sign', priorities: [ 'pdf' ], fallback_format: ~, prefer_extension: true }
     view:
@@ -173,6 +170,17 @@ fos_rest:
         messages:
             'Symfony\Component\HttpKernel\Exception\AccessDeniedHttpException': true
 
+fos_js_routing:
+    routes_to_expose: [ list_classeur_api, get_classeur_api, isauthenticated_user_api ]
+
+jms_serializer:
+    metadata:
+        auto_detection: true
+        directories:
+            FOSUserBundle:
+                path: "@SesileUserBundle/Resources/config/serializer/"
+                namespace_prefix: "FOS\\UserBundle"
+
 nelmio_api_doc:
     name: Sesile API
     motd:
@@ -189,8 +197,8 @@ services:
         arguments: ["@doctrine.orm.entity_manager", "@security.token_storage"]
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
-    kernel.listener.route_listener:
-        class: Sesile\MainBundle\EventListener\RouteListener
-        arguments: ["@doctrine.orm.entity_manager", "@security.token_storage", "@service_container", "@security.authorization_checker"]
-        tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onDomainParse }
+#    kernel.listener.route_listener:
+#        class: Sesile\MainBundle\EventListener\RouteListener
+#        arguments: ["@doctrine.orm.entity_manager", "@security.token_storage", "@service_container", "@security.authorization_checker"]
+#        tags:
+#            - { name: kernel.event_listener, event: kernel.request, method: onDomainParse }
