--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "sensio/framework-extra-bundle": "3.0.*",
         "incenteev/composer-parameter-handler": "~2.1",
         "friendsofsymfony/user-bundle": "2.0.*",
-        "friendsofsymfony/jsrouting-bundle": "~1.6",
+        "friendsofsymfony/jsrouting-bundle": "2.0.x-dev",
         "oneup/uploader-bundle": "~1.7",
         "friendsofsymfony/rest-bundle": "2.2.*",
         "nelmio/api-doc-bundle": "@stable",
