[Evo] #1608 - Validation circuit list of the local authority
- Fix bug in backend of multiples routes namings
- Add validation circuit controller 
- Add validation circuit component in front with a circuit list and search by circuit name and user name

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -43,18 +43,9 @@ sesile_type_classeur_api:
     resource: "@SesileClasseurBundle/Controller/TypeClasseurApiController.php"
     type:     rest
 
-sesile_user_api:
-    resource: "@SesileUserBundle/Controller/UserApiController.php"
-    type:     rest
-    prefix:   /apirest/users
-
-#sesile_users:
-#    resource: "@SesileUserBundle/Controller/"
-#    type: annotation
-#    prefix: /user
-
-_default:
-    path: /
+sesile_users:
+    resource: "@SesileUserBundle/Controller/"
+    type: annotation
 
 oneup_uploader:
     resource: .
