[evo] #1631 - voir la liste globale des classeurs de sa collectivité
 - update config.yml pour exposition des routes
 - ajout des routes des etapes classeurs
 - modification route à la connexion
 - ajout appi endpoint

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -171,7 +171,7 @@ fos_rest:
             'Symfony\Component\HttpKernel\Exception\AccessDeniedHttpException': true
 
 fos_js_routing:
-    routes_to_expose: [ list_classeur_api, get_classeur_api, isauthenticated_user_api ]
+    routes_to_expose: [ list_classeur_api, get_classeur_api, isauthenticated_user_api, list_etapeclasseur_api ]
 
 jms_serializer:
     metadata:
