--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -39,6 +39,11 @@ sesile_classeur_api:
     type:     rest
     prefix:   /apirest/classeurs/
 
+sesile_etapeclasseur_api:
+    resource: "@SesileUserBundle/Controller/EtapeClasseurApiController.php"
+    type:     rest
+    prefix:   /apirest/etape-classeurs/
+
 sesile_type_classeur_api:
     resource: "@SesileClasseurBundle/Controller/TypeClasseurApiController.php"
     type:     rest
@@ -76,7 +81,7 @@ fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 
 login:
-    path:   /login_check
+    path:   /dashboard
 
 login_check:
     path:   /login_check
