[Evo] #1611 - Validation circuit details
- This commit include validation circuit research  feature #1610

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -34,14 +34,9 @@ sesile_api:
 #    type:     annotation
 #    prefix:   /classeur/
 
-sesile_classeur_api:
-    resource: "@SesileClasseurBundle/Controller/ClasseurApiController.php"
-    type:     rest
-    prefix:   /apirest/classeurs/
-
 sesile_type_classeur_api:
-    resource: "@SesileClasseurBundle/Controller/TypeClasseurApiController.php"
-    type:     rest
+    resource: "@SesileClasseurBundle/Controller/"
+    type:     annotation
 
 sesile_users:
     resource: "@SesileUserBundle/Controller/"
