--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "ali boulajine <abdelaliboulajine@gmail.com>",
   "license": "null",
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.9.1",
+    "@symfony/webpack-encore": "^0.14.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -29,6 +29,8 @@
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "render-if": "^0.1.1"
+    "react-user-avatar": "^1.9.0",
+    "render-if": "^0.1.1",
+    "watch": "^1.0.2"
   }
 }
