[evo] #1631 - voir la liste globale des classeurs de sa collectivité
 - add function sort
 - add function select checkbox
 - modify routes and security

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -37,7 +37,7 @@ sesile_api:
 sesile_classeur_api:
     resource: "@SesileClasseurBundle/Controller/ClasseurApiController.php"
     type:     rest
-    prefix:   /apirest/classeurs/
+    prefix:   /apirest/classeur
 
 sesile_etapeclasseur_api:
     resource: "@SesileUserBundle/Controller/EtapeClasseurApiController.php"
