--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -5,7 +5,7 @@ parameters:
     database_port: null
     database_name: sesile-react
     database_user: root
-    database_password: sictiam
+    database_password: LOJ_iko789
     mailer_transport: smtp
     mailer_host: ***REMOVED***
     mailer_port: 25
