--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "devDependencies": {
     "@symfony/webpack-encore": "^0.14.0",
     "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
     "prop-types": "^15.5.10",
@@ -22,6 +24,7 @@
     "build": "./node_modules/.bin/encore production"
   },
   "dependencies": {
+    "debounce": "^1.0.2",
     "foundation-sites": "^6.4.1",
     "history": "^4.6.3",
     "moment": "^2.18.1",
