[Evo] ref #1908 - list of  all 'collectivite'

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,5 +1,5 @@
 sesile_main:
-    resource: "@SesileMainBundle/Controller/DefaultController.php"
+    resource: "@SesileMainBundle/Controller/"
     type:     annotation
     prefix:   /
 
