[evo] #1616 - voir la fiche détail d'un utilisateur
 - Update global.scss for templating admin details
 - Update User.jsx for user details
 - Add endpoint API to get Roles
 - Add enabled to endpoint user
 - New endpoint UserRoles
 - Update User entity
 - Update UserRole entity
 - Update UserType and UserRoleType

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -112,7 +112,7 @@ parameters:
     cas_server: devsso.sictiam.fr
     be_simple.sso_auth.client.option.curlopt_ssl_verifypeer.value: FALSE
     upload:
-        path: '%kernel.root_dir%/../web/uploads/avatars/'
+        path: '%kernel.project_dir%/web/uploads/avatars/'
         fics: '%kernel.root_dir%/../web/uploads/docs/'
         logo_coll: '%kernel.project_dir%/web/uploads/logo_coll/'
         msg_acc: '%kernel.root_dir%/../web/uploads/documents/msg_accueil.txt'
