[evo] #1613 - avoir accès à la liste des utilisateurs déclarés pour ma collectivité
 - Update review code
 - translate routes in french

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,7 +5,7 @@ sesile_main:
 
 sesile_classeur:
     defaults: { _controller: SesileMainBundle:Default:app, reactRouting: null }
-    path: /classeur/{reactRouting}
+    path: /classeurs/{reactRouting}
     requirements:
         reactRouting: ".+"
 
