--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "debounce": "^1.0.2",
     "foundation-sites": "^6.4.1",
     "history": "^4.6.3",
-    "node-sass": "^4.5.3",
     "moment": "^2.18.1",
+    "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-notification-system": "0.2.x",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-user-avatar": "^1.9.0",
