[evo] #1592 - voir mes informations personnelles de profil : prénom, nom, e-mail, qualité, signature manuscrite et photo (avatar)
 - Update backend routing for user account
 - Update Login.jsx to add user's information
 - Add Account.jsx for user's information details
 - Add AvatarForm and SignatureForm to refactor component
 - Update Users.jsx with new components

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,6 +9,12 @@ sesile_classeur:
     requirements:
         reactRouting: ".+"
 
+sesile_ustilisateur:
+    defaults: { _controller: SesileMainBundle:Default:app, reactRouting: null }
+    path: /utilisateur/{reactRouting}
+    requirements:
+        reactRouting: ".+"
+
 sesile_admin:
     defaults: { _controller: SesileMainBundle:Default:app, reactRouting: null }
     path: /admin/{reactRouting}
