[evo] #1602 - avoir accès à des aides en ligne PDF et vidéos et le détail des mises à jour
 - New components for documentations
 - New endpoint API for documentations
 - Update translation
 - Update SF routes

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,9 +9,15 @@ sesile_classeur:
     requirements:
         reactRouting: ".+"
 
-sesile_ustilisateur:
+sesile_utilisateur:
     defaults: { _controller: SesileMainBundle:Default:app, reactRouting: null }
     path: /utilisateur/{reactRouting}
+    requirements:
+        reactRouting: ".+"
+
+sesile_documentations:
+    defaults: { _controller: SesileMainBundle:Default:app, reactRouting: null }
+    path: /documentations/{reactRouting}
     requirements:
         reactRouting: ".+"
 
