--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -110,7 +110,7 @@ be_simple_sso_auth:
 
 parameters:
     informations:
-        version: 4.2.0
+        version: 4.0-sprint4
         contact_link: http://support.sictiam.fr/declarer-un-incident/
     cas_server: devsso.sictiam.fr
     be_simple.sso_auth.client.option.curlopt_ssl_verifypeer.value: FALSE
