--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-color": "^2.13.8",
+    "react-datepicker": "^0.56.0",
     "react-dom": "^15.6.1",
     "react-draggable": "^3.0.3",
     "react-i18next": "^6.0.0",
