[evo] #1590 - faire une recherche de classeurs dans le parapheur
 - Update Symfony routing to refresh /classeur/id
 - Update some css elements
 - Add new component SearchClasseur
 - Upgrade component Classeur
 - Add new endpoint to return all classeurs for a user
 - Add some translations

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,9 +3,15 @@ sesile_main:
     type:     annotation
     prefix:   /
 
-sesile_classeur:
+sesile_classeurs:
     defaults: { _controller: SesileMainBundle:Default:app, reactRouting: null }
     path: /classeurs/{reactRouting}
+    requirements:
+        reactRouting: ".+"
+
+sesile_classeur:
+    defaults: { _controller: SesileMainBundle:Default:app, reactRouting: null }
+    path: /classeur/{reactRouting}
     requirements:
         reactRouting: ".+"
 
