--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
+    "react-autosuggest": "^9.3.2",
     "react-color": "^2.13.8",
     "react-datepicker": "^0.56.0",
     "react-dom": "^15.6.1",
@@ -41,6 +42,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-rte": "0.15.0",
+    "react-sortable-hoc": "^0.6.8",
     "react-user-avatar": "^1.9.0",
     "render-if": "^0.1.1",
     "validatorjs": "^3.13.5",
