--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,11 +1,11 @@
 # This file is auto-generated during the composer install
 parameters:
     database_driver: pdo_mysql
-    database_host: 127.0.0.1
-    database_port: null
+    database_host: db
+    database_port: 3306
     database_name: sesile-react
     database_user: root
-    database_password: LOJ_iko789
+    database_password: sictiam
     mailer_transport: smtp
     mailer_host: ***REMOVED***
     mailer_port: 25
