[evo] #1635 - voir le contenu du classeur
 - Add config to integrate OnlyOffice #2134
 - New routes for documents
 - New security rules for documents and OnlyOffice
 - Add css to display classeur and documents
 - Integrate Documents and OnlyOffice in classeur view
 - Display, upload, delete documents for a classeur
 - Implements logs Actions for delete and upload documents
 - New documents endpoint API
 - Update document controller
 - Add translation for documents
 - Add react dropzone component
 - Remove oneup uploader symfony component
 - Update Symfony bundle
 - Improve note integration
 - Symplify code with const Document in Documents

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,6 +36,7 @@ twig:
         upload_path_signatures: /uploads/signatures/
         sesile_version: 3.5
         id_video_yt: 'ms-YYoaU4PE'
+        only_office_url: 'https://office.sictiam.fr/web-apps/apps/api/documents/api.js'
     exception_controller: 'FOS\RestBundle\Controller\ExceptionController::showAction'
 
 # Assetic Configuration
@@ -71,19 +72,6 @@ swiftmailer:
     port:      25
 #    transport: mail
 #    host:      localhost
-
-oneup_uploader:
-#    mappings:
-#        docs:
-#            frontend: dropzone
-#            use_orphanage: true
-    mappings:
-        docs:
-            frontend: custom
-            custom_frontend:
-                class: Sesile\DocumentBundle\Controller\DocumentUploader
-                name: DocumentUploader
-            use_orphanage: true
 
 fos_user:
     db_driver:     orm
