--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -27,16 +27,11 @@ monolog:
 assetic:
     use_controller: true
 
-#swiftmailer:
-#    delivery_address: me@example.com
-
 parameters:
     cas_server: devsso.sictiam.fr
     cas_port: 389
     cas_path: /
     cas_protocol: '2.0'
-#    gorg:
-#        path: %kernel.root_dir%/../vendor/gorg/phpcas/
     upload:
         path: '%kernel.root_dir%/../web/uploads/avatars/'
         signatures: '%kernel.root_dir%/../web/uploads/signatures/'
@@ -56,3 +51,8 @@ parameters:
         zone: sictiam.fr
         target: dmzproxy.sictiam.fr.
     email_sender_address: sictiam@sesile.fr
+
+# Twig Configuration
+twig:
+    globals:
+        only_office_url: 'http://localhost:8080/web-apps/apps/api/documents/api.js'
