[evo] #1588 - avoir accès au tableau de bord
 - Fix bug routing after login
 - Improve display of list classeurs
 - New component ClasseurProgress for use in dashboard
 - New component for dashboard
 - New endpoitn API etapeClasseur for dashboard stats
 - New translations
 - New button image for classeur action
 - Add and implement react google chart
 - Improve security.yml
 - refactor routes for dashboard
 - Fix ClasseurProgress upgrade
 - Remove obsolete component Home
 - Remove authentification api and in front, replace by security rule

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,6 +3,12 @@ sesile_main:
     type:     annotation
     prefix:   /
 
+sesile_tableau-de-bord:
+    defaults: { _controller: SesileMainBundle:Default:app, reactRouting: null }
+    path: /tableau-de-bord
+    requirements:
+        reactRouting: ".+"
+
 sesile_classeurs:
     defaults: { _controller: SesileMainBundle:Default:app, reactRouting: null }
     path: /classeurs/{reactRouting}
@@ -87,7 +93,7 @@ fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 
 login:
-    path:   /dashboard
+    path:   /tableau-de-bord
 
 login_check:
     path:   /login_check
