[Evo] #1601 - Manage documentation
- front-end proxy (redirection admin and super admin) improved
- Improve documentation view design 
- deleting useless code in back

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -104,7 +104,7 @@ parameters:
     be_simple.sso_auth.client.option.curlopt_ssl_verifypeer.value: FALSE
     upload:
         path: '%kernel.project_dir%/web/uploads/avatars/'
-        fics: '%kernel.root_dir%/../web/uploads/docs/'
+        fics: '%kernel.project_dir%/web/uploads/docs/'
         logo_coll: '%kernel.project_dir%/web/uploads/logo_coll/'
         msg_acc: '%kernel.root_dir%/../web/uploads/documents/msg_accueil.txt'
         signatures: '%kernel.root_dir%/../web/uploads/signatures/'
