--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -39,7 +39,7 @@ parameters:
     url_applet: signature.sesile.fr
     upload:
         path: '%kernel.root_dir%/../web/uploads/avatars/'
-        fics: '%kernel.root_dir%/../web/uploads/docs/'
+        fics: '%kernel.project_dir%/web/uploads/docs/'
         logo_coll: '%kernel.root_dir%/../web/uploads/logo_coll/'
         msg_acc: '%kernel.root_dir%/../web/uploads/documents/msg_accueil.txt'
         signatures: '%kernel.root_dir%/../web/uploads/signatures/'
