[Evo] #2987 - Mockup updates
 - Update routing config for dashboards
 - Improve CSS
 - Add awesome icon in sass
 - Update icons in design
 - Refactor menu
 - Add new files and routes for stats
 - Update design for classeur
 - Update design for classeur list
 - Fix document responses api
 - Add some transations

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,7 +5,7 @@ sesile_main:
 
 sesile_tableau-de-bord:
     defaults: { _controller: SesileMainBundle:Default:app, reactRouting: null }
-    path: /tableau-de-bord
+    path: /tableau-de-bord/{reactRouting}
     requirements:
         reactRouting: ".+"
 
