--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "debounce": "^1.0.2",
+    "font-awesome": "^4.7.0",
     "foundation-icons": "^1.0.1",
     "foundation-sites": "^6.4.2",
     "history": "^4.6.3",
