--- a/docker-symfony/docker-compose.yml
+++ b/docker-symfony/docker-compose.yml
@@ -40,3 +40,7 @@ services:
             image: phpmyadmin/phpmyadmin
             ports:
                 - "8080:80"
+    onlyoffice:
+        image: onlyoffice/documentserver
+        ports:
+          - "8081:80"
