--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dropzone": "^4.2.2",
     "react-google-charts": "^1.5.5",
     "react-i18next": "^6.0.0",
+    "react-iframe": "^1.1.0",
     "react-notification-system": "0.2.x",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
