--- a/docker-symfony/php7-fpm/Dockerfile
+++ b/docker-symfony/php7-fpm/Dockerfile
@@ -7,7 +7,8 @@ MAINTAINER Maxence POUTORD <maxence.poutord@gmail.com>
 RUN apt-get update && apt-get install -y \
     openssl \
     git \
-    unzip
+    unzip \
+    cron
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -39,3 +40,5 @@ RUN echo 'alias sf3="php bin/console"' >> ~/.bashrc
 
 WORKDIR /var/www/symfony
 RUN HTTPDUSER=$(ps axo user,comm | grep -E '[a]pache|[h]ttpd|[_]www|[w]ww-data|[n]ginx' | grep -v root | head -1 | cut -d\  -f1)
+
+RUN echo "0 1 * * * root /var/www/symfony/app/console sesile:user:delayedClasseurs --env=prod &> /dev/null 2>&1" > /etc/cron.d/sesile_scheduler_run
