--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -193,3 +193,9 @@ services:
         tags:
             -  { name: console.command }
         arguments: ["@monolog.logger.request","@doctrine.orm.entity_manager" , '@service_container', '@mailer']
+    Sesile\ClasseurBundle\Service\ActionMailer:
+        autowire: true
+        autoconfigure: true
+        public: true
+        arguments:
+            $fromEmail: '%email_sender_address%'
