[Evo] #2744 - Mail notification for classeur
 - Upgrade ActionMailer Service
 - Update Classeur Endpoint for notification
 - Update Classeur controller for classeur routing
 - Upgrade getValidant in classeurRepository
 - Remove some obsolete code

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -199,3 +199,4 @@ services:
         public: true
         arguments:
             $fromEmail: '%email_sender_address%'
+            $paths: '%upload%'
